# memory_demo

./: .gitignore  README.md  huge_code_generator_v2.cpp
macos/process/: CMakeLists.txt  README.md  activity_monitor_demo.mm  data_segments_demo.cpp  file_mapping_dirty_demo  file_mapping_dirty_demo.cpp  large_code_segment.cpp  mach_shared_memory_demo.cpp  memory_info.cc  memory_info.h  shared_library_demo.cpp  vmmap 66814.sh  xnu_footprint_demo.cpp
macos/system/: CMakeLists.txt  README.md  activity_monitor_demo.mm  test.cc
windows/process/: CMakeLists.txt  README.md  README_DEMO.md  memory_allocation_demo.cpp  memory_metrics_demo.cpp  process_memory_monitor.cpp  process_memory_monitor.h
windows/system/: README.md
